--- a/client/CountryProfile.html
+++ b/client/CountryProfile.html
@@ -1,3 +1,21 @@
+<template name="formSection">
+  <div class="panel panel-default">
+      <div class="panel-heading">
+          <h4 class="panel-title">
+              <a data-toggle="collapse" data-parent="#accordion" href="#{{this.id}}">{{this.heading}}</a>
+          </h4>
+      </div>
+      <div id="{{this.id}}" class="panel-collapse collapse">
+          <div class="panel-body">
+            <fieldset>
+              {{> UI.contentBlock}}
+            </fieldset>
+          </div>
+      </div>
+  </div>
+</template>
+
+
 <template name="CountryProfile">
   <div class="container">
     <h2>Country Profile for {{data.country}}</h2>
@@ -11,22 +29,20 @@
       </ul>
     </div>
     {{#autoForm collection="CountryIndicators" id="editIndicatorsForm" type=typeHelper doc=docHelper }}
-      <!-- <fieldset>
-        {{> afQuickField name='country'}}
-        {{> afQuickField name='year'}}
-      </fieldset> -->
-      <fieldset>
-        <legend>Early Childhood Care and Education</legend>
-        {{> afQuickField name='ecce.Net_Enrolment_Ratio'}}
-        {{> afQuickField name='ecce.Gross_Enrolment_Ratio'}}
-        {{> afQuickField name='ecce.Student_Teacher_Ratio'}}
-        {{> afQuickField name='ecce.Number_ECCE_Centres_which_meet_National_Minimum_Quality_Standards'}}
-        {{> afQuickField name='ecce.Implementation_of_quality_ECCE_curriculum'}}
-        {{> afQuickField name='ecce.Existence_of_National_ECCE_Policy_and_Planning_Framework'}}
-        {{> afQuickField name='ecce.EMIS_inclusive_of_ECCE_data'}}
-      </fieldset>
-      <fieldset>
-        <legend>Formal Education</legend>
+
+      <div class="panel-group" id="accordion">
+        {{#formSection id="ECCE" heading="Early Childhood Care and Education"}}
+          {{> afQuickField name='ecce.Net_Enrolment_Ratio'}}
+          {{> afQuickField name='ecce.Gross_Enrolment_Ratio'}}
+          {{> afQuickField name='ecce.Student_Teacher_Ratio'}}
+          {{> afQuickField name='ecce.Number_ECCE_Centres_which_meet_National_Minimum_Quality_Standards'}}
+          {{> afQuickField name='ecce.Implementation_of_quality_ECCE_curriculum'}}
+          {{> afQuickField name='ecce.Existence_of_National_ECCE_Policy_and_Planning_Framework'}}
+          {{> afQuickField name='ecce.EMIS_inclusive_of_ECCE_data'}}
+        {{/formSection}}
+      </div>
+
+      {{#formSection id="FE" heading="Formal Education"}}
         {{> afQuickField name='formalEducation.Net_enrolment_ratio'}}
         {{> afQuickField name='formalEducation.Gross_enrolment_ratio'}}
         {{> afQuickField name='formalEducation.Percentage_new_entrance_to_1st_year_primary_with_ecce_experience'}}
@@ -46,9 +62,9 @@
         {{> afQuickField name='formalEducation.Frequency_of_curriculum_review'}}
         {{> afQuickField name='formalEducation.Compulsory_education_policy_developed_and_implemented'}}
         {{> afQuickField name='formalEducation.Language_policy_developed'}}
-      </fieldset>
-      <fieldset>
-        <legend>Technical vocational education and training (TVET)</legend>
+      {{/formSection}}
+
+      {{#formSection id="TVET" heading="Technical vocational education and training (TVET)"}}
         {{> afQuickField name='tvet.Gross_enrolment_ratio'}}
         {{> afQuickField name='tvet.Percentage_TVET_training_providers_registered_with_NAA'}}
         {{> afQuickField name='tvet.Percentage_TVET_courses_professionally_assessed_validated'}}
@@ -57,10 +73,9 @@
         {{> afQuickField name='tvet.Number_of_graduates_with_national_TVET_qualifications'}}
         {{> afQuickField name='tvet.Number_of_TVET_graduates_who_are_gainfully_employed'}}
         {{> afQuickField name='tvet.Number_of_industry_stakeholders_engaged'}}
-      </fieldset>
+      {{/formSection}}
 
-      <fieldset>
-        <legend>Non-formal Education (NFE)</legend>
+      {{#formSection id= "NFE" heading="Non-formal Education (NFE)"}}
         {{> afQuickField name='nfe.Adult_literacy_rate'}}
         {{> afQuickField name='nfe.Participation_Rate'}}
         {{> afQuickField name='nfe.Participants_instructor_ratio'}}
@@ -68,10 +83,9 @@
         {{> afQuickField name='nfe.Percentage_of_NFE_providers_promoting_gender_equality'}}
         {{> afQuickField name='nfe.Number_of_NGOs_delivering_NFE_programs'}}
         {{> afQuickField name='nfe.Existence_of_pathways'}}
-      </fieldset>
+      {{/formSection}}
 
-      <fieldset>
-        <legend>Teacher Development</legend>
+      {{#formSection id="TD" heading="Teacher Development"}}
         {{> afQuickField name='teachers.Percentage_of_Qualified_Untrained_teachers'}}
         {{> afQuickField name='teachers.Existence_of_beginning_teacher_induction_programs'}}
         {{> afQuickField name='teachers.Percentage_teachers_undertook_professional_development'}}
@@ -82,10 +96,9 @@
         {{> afQuickField name='teachers.Percentage_teachers_leaving_before_retirement_age'}}
         {{> afQuickField name='teachers.Percentage_ECCE_teachers_under_government_employment'}}
         {{> afQuickField name='teachers.Mandatory_Disability_Inclusive_Education'}}
-      </fieldset>
+      {{/formSection}}
 
-      <fieldset>
-        <legend>System Governance and Administration</legend>
+      {{#formSection id="SGA" heading="System Governance and Administration"}}
         {{> afQuickField name='sga.Existence_of_mid_term_strategy_to_ensure_achievement_of_sector_plans'}}
         {{> afQuickField name='sga.Percentage_policy_and_planning_staff_involved_in_ongoing_training'}}
         {{> afQuickField name='sga.Clear_outline_of_obligations_by_donors_executing_agencies'}}
@@ -97,7 +110,7 @@
         {{> afQuickField name='sga.National_annual_education_statistics_report'}}
         {{> afQuickField name='sga.Existence_of_communication_strategy_to_support_education_outcomes'}}
         {{> afQuickField name='sga.Reduction_in_irregularities_to_assure_transparency_and_accountability'}}
-      </fieldset>
+      {{/formSection}}
 
       <button type="submit" class="btn btn-primary">Save Data</button>
     {{/autoForm}}
